tests/machine/x/rust/load_yaml.error
line 0: compile: exit status 1
error[E0308]: mismatched types
  --> /workspace/mochi/tests/machine/x/rust/load_yaml.rs:19:147
   |
19 | ...ew(); m.insert("format", "yaml"); m });
   |                                      ^ expected `HashMap<String, String>`, found `BTreeMap<&str, &str>`
   |
   = note: expected struct `HashMap<String, String>`
              found struct `BTreeMap<&str, &str>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.

#[derive(Default, Debug, Clone, PartialEq, Eq, Hash)]